# Foundation-startup

./: .touch  .travis.yml  CMakeLists.txt  README.md  RELEASENOTES.md  clib.json  package.json
.github/workflows/: semgrep.yml
.mulle-env/share/: environment-project.sh  environment-share.sh
.mulle-sourcetree/etc/: config
.mulle/etc/env/: environment-global.sh  environment-host-ci-prerelease.sh  environment-host-travis-ci-prerelease.sh  environment-project.sh
.mulle/etc/project/: formula-info.sh  generate-formula.sh  version-info.sh
.mulle/etc/sourcetree/: config
.mulle/share/env/: environment-extension.sh  environment-project.sh  optionaltool  tool
.mulle/share/sde/: extension
.mulle/share/sourcetree/: config
assets/dox/: TOC.md
cmake/: DependenciesAndLibraries.cmake  Headers.cmake  HeadersAndSources.cmake  _Dependencies.cmake  _Headers.cmake  _Sources.cmake
cmake/reflect/: _Dependencies.cmake  _Sources.cmake
cmake/share/: CreateLoaderIncObjC.cmake  DefineLoaderIncObjC.cmake  Environment.cmake  ExecutableObjC.cmake  LinkManifestC.cmake  OptimizedLinkObjC.cmake  StandaloneC.cmake  StartupC.cmake
cola/: description.md.bud  info.md.bud  properties.plist
src/: Foundation-standalone.m  Foundation-startup.m  Foundation.h  Foundation.m  MulleObjCLoader+Foundation.m  NSDebug.h  NSObjCRuntime.h  _Foundation-import-private.h  _Foundation-import.h  _Foundation-include-private.h  _Foundation-include.h  import-private.h  import.h  include-private.h  include.h  objc-loader.inc
